@@ -1,3 +1,7 @@
+2011-04-26  Charlie Zender  <zender@uci.edu>
+
+	* Disable NC_NOFILL mode until netCDF 4.1.3 released
+
 2011-04-22  Charlie Zender  <zender@uci.edu>
 
 	* Test disabling NC_NOFILL mode
